Magically prevent jumping of content when transitioning to floating state

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -284,7 +284,7 @@ and (max-width: 1000px) {
   position: fixed;
   top: 43px;
   right: 85px;
-  padding-right: 0;
+  padding-right: 8px;
   height: 100%;
   padding-bottom: 50px;
 }
